--- a/sign/templates/index.html
+++ b/sign/templates/index.html
@@ -3,6 +3,11 @@
         <title>Django Page</title>
     </head>
     <body>
-        <h1>Hello Django!</h1>
+        <h1>发布会管理</h1>
+        <from>
+            <input name="username" type="text" placeholder="username"><br>
+            <input name="password" type="password" placeholder="password"><br>
+            <button id="btn" type="submit">登录</button>
+        </from>
     </body>
 </html>
