--- a/sign/templates/event_manage.html
+++ b/sign/templates/event_manage.html
@@ -4,5 +4,8 @@
     </head>
     <body>
         <h1>Login Success!</h1>
+        <div style="float:right;">
+            <a>嘿! {{ user }} 欢迎</a><hr />
+        </div>
     </body>
 </html>
