--- a/sign/templates/event_manage.html
+++ b/sign/templates/event_manage.html
@@ -1,11 +1,52 @@
-<html>
+<html lang="zh-CN">
     <head>
-        <title>Event Manage Page</title>
+        {% load bootstrap3 %}
+        {% bootstrap_css %}
+        {% bootstrap_javascript %}
+        <title>Event Manage</title>
     </head>
-    <body>
-        <h1>Login Success!</h1>
-        <div style="float:right;">
-            <a>嘿! {{ user }} 欢迎</a><hr />
+    <body role="document">
+        <!--导航栏-->
+        <nav class="navbar navbar-inverse navbar-fixed-top">
+            <div class="container">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="/event_manage/">Guest Manage System</a>
+                </div>
+                <div id="navbar" class="collapse navbar-collapse">
+                    <ul class="nav navbar-nav">
+                        <li class="active"><a href="#">发布会</a></li>
+                        <li><a href="/guest_manage/">嘉宾</a></li>
+                    </ul>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a href="#">{{ user }}</a></li>
+                        <li><a href="/logout/">退出</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+
+        <!--发布会列表-->
+        <div class="row" style="padding-top: 80px;">
+            <div class="col-md-6">
+                <table class="table table-striped">
+                    <thead>
+                        <tr>
+                            <th>id</th><th>名称</th><th>状态</th><th>地址</th><th>时间</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for event in events %}
+                            <tr>
+                                <td>{{ event.id }}</td>
+                                <td>{{ event.name }}</td>
+                                <td>{{ event.status }}</td>
+                                <td>{{ event.address }}</td>
+                                <td>{{ event.start_time }}</td>
+                            </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+            </div>
         </div>
     </body>
 </html>
