--- a/sign/templates/event_manage.html
+++ b/sign/templates/event_manage.html
@@ -25,6 +25,18 @@
             </div>
         </nav>
 
+        <!--发布会搜索表单-->
+        <div class="page-header" style="padding-top: 60px;">
+            <div id="navbar" class="navbar-collapse collapse">
+                <form class="navbar-form" method="get" action="/search_name/">
+                    <div class="form-group">
+                        <input name="name" type="text" placeholder="名称" class="form-control">
+                    </div>
+                    <button type="submit" class="btn btn-success">搜索</button>
+                </form>
+            </div>
+        </div>
+
         <!--发布会列表-->
         <div class="row" style="padding-top: 80px;">
             <div class="col-md-6">
