--- a/sign/templates/event_manage.html
+++ b/sign/templates/event_manage.html
@@ -43,7 +43,7 @@
                 <table class="table table-striped">
                     <thead>
                         <tr>
-                            <th>id</th><th>名称</th><th>状态</th><th>地址</th><th>时间</th>
+                            <th>id</th><th>名称</th><th>状态</th><th>地址</th><th>时间</th><th>签到</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -54,6 +54,7 @@
                                 <td>{{ event.status }}</td>
                                 <td>{{ event.address }}</td>
                                 <td>{{ event.start_time }}</td>
+                                <td><a href="/sign_index/{{ event.id }}/" target="{{ event.id }}_blank">sign</a> </td>
                             </tr>
                         {% endfor %}
                     </tbody>
